insert columns to the database

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,8 +24,8 @@
 
 
         <td data-th="ID"th:text="${recipe.id}">1</td>
-        <td data-th="Recipe Name"th:text="${recipe.recipeName}">Joe</td>
-        <td data-th="Recipe Cost"th:text="${recipe.cost}">Buck</td>
+        <td data-th="Recipe Name"th:text="${recipe.description}">Joe</td>
+<!--        <td data-th="Recipe Cost"th:text="${recipe.cost}">Buck</td>-->
 
     </tr>
 
