--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -66,12 +66,15 @@ h1 {
   color: #fff;
   border-radius: .4em;
   overflow: hidden;
+  border: 4px solid black;
 }
 .rwd-table tr {
   border-color: #46637f;
+    border: 1px solid black;
 }
 .rwd-table th, .rwd-table td {
   margin: .5em 1em;
+    border: 1px solid black;
 }
 @media (min-width: 480px) {
   .rwd-table th, .rwd-table td {
